src/test/ui/binding/const-param.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-param.rs:3:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: consider using `min_const_generics` instead, which is more stable and complete

error[E0158]: const parameters cannot be referenced in patterns
  --> $DIR/const-param.rs:7:9
   |
LL |         N => {}
   |         ^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0158`.
